--- a/JointDev/JointDev/View/Main/Child/Template/TempViewController.storyboard
+++ b/JointDev/JointDev/View/Main/Child/Template/TempViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D5d-rV-mCt">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -11,7 +11,7 @@
         <!--Temp View Controller-->
         <scene sceneID="V2G-x4-J0I">
             <objects>
-                <viewController id="D5d-rV-mCt" customClass="TempViewController" customModule="JointDev" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TempViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="D5d-rV-mCt" customClass="TempViewController" customModule="JointDev" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MlV-OG-eqK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
