--- a/JointDev/JointDev/View/Main/Child/ryouma/RyomaTableViewCell.xib
+++ b/JointDev/JointDev/View/Main/Child/ryouma/RyomaTableViewCell.xib
@@ -9,18 +9,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RyomaTableViewCell" rowHeight="133" id="KGk-i7-Jjw" customClass="RyomaTableViewCell" customModule="JointDev" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="281" height="133"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RyomaTableViewCell" rowHeight="95" id="KGk-i7-Jjw" customClass="RyomaTableViewCell" customModule="JointDev" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="281" height="133"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="95"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S5m-Aa-kWL">
                         <rect key="frame" x="16" y="8" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="50" id="3YN-ov-coe"/>
-                            <constraint firstAttribute="width" constant="50" id="X5k-gw-pAg"/>
+                            <constraint firstAttribute="width" constant="50" id="2Cp-nd-fwr"/>
+                            <constraint firstAttribute="height" constant="50" id="Yxk-ql-XAc"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TsO-X0-tHA">
@@ -30,18 +30,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r39-oJ-BkP">
-                        <rect key="frame" x="223" y="8" width="20" height="20"/>
+                        <rect key="frame" x="257" y="4" width="20" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="4WV-EL-J72"/>
-                            <constraint firstAttribute="height" constant="20" id="6uP-xf-Nyj"/>
+                            <constraint firstAttribute="height" constant="20" id="JXA-8g-GeG"/>
+                            <constraint firstAttribute="width" constant="20" id="LNU-yB-fhL"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICO-Ma-0HF">
-                        <rect key="frame" x="245" y="8" width="20" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="20" id="Gnq-QZ-crf"/>
-                            <constraint firstAttribute="height" constant="20" id="Xdu-ak-GxW"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICO-Ma-0HF">
+                        <rect key="frame" x="279" y="8" width="5" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -52,43 +48,40 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="2H4-au-Ghw">
-                        <rect key="frame" x="74" y="78" width="190" height="20.5"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ju7-1G-1WD">
-                                <rect key="frame" x="0.0" y="0.0" width="190" height="20.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="190" id="aeH-OZ-POw"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ju7-1G-1WD">
+                        <rect key="frame" x="94" y="60" width="190" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="ICO-Ma-0HF" secondAttribute="trailing" constant="16" id="23x-tO-Fl1"/>
-                    <constraint firstItem="TsO-X0-tHA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="6zx-MA-uMb"/>
-                    <constraint firstItem="ICO-Ma-0HF" firstAttribute="leading" secondItem="r39-oJ-BkP" secondAttribute="trailing" constant="2" id="IG2-et-9MG"/>
-                    <constraint firstItem="S5m-Aa-kWL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="L4S-HX-2Ai"/>
-                    <constraint firstItem="TsO-X0-tHA" firstAttribute="leading" secondItem="S5m-Aa-kWL" secondAttribute="trailing" constant="8" id="SWn-aV-1ZS"/>
-                    <constraint firstItem="ICO-Ma-0HF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="UzB-14-O0v"/>
-                    <constraint firstItem="S5m-Aa-kWL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="WOt-WU-gO8"/>
-                    <constraint firstItem="bkJ-Wi-wpz" firstAttribute="top" secondItem="TsO-X0-tHA" secondAttribute="bottom" constant="2" id="ekk-yS-rot"/>
-                    <constraint firstItem="r39-oJ-BkP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ij8-xa-R8e"/>
-                    <constraint firstItem="bkJ-Wi-wpz" firstAttribute="leading" secondItem="S5m-Aa-kWL" secondAttribute="trailing" constant="8" id="zcf-zO-Qd5"/>
+                    <constraint firstItem="TsO-X0-tHA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="59b-kX-6Ja"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Ju7-1G-1WD" secondAttribute="bottom" constant="3" id="AxC-j7-KG3"/>
+                    <constraint firstItem="ICO-Ma-0HF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Cq2-zA-orb"/>
+                    <constraint firstItem="ICO-Ma-0HF" firstAttribute="centerY" secondItem="r39-oJ-BkP" secondAttribute="centerY" id="EI0-7u-Eoy"/>
+                    <constraint firstItem="Ju7-1G-1WD" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="PjC-d8-G3O"/>
+                    <constraint firstItem="bkJ-Wi-wpz" firstAttribute="leading" secondItem="S5m-Aa-kWL" secondAttribute="trailing" constant="8" id="QMU-Sb-jBf"/>
+                    <constraint firstItem="S5m-Aa-kWL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="WP2-Pv-ZcK"/>
+                    <constraint firstItem="bkJ-Wi-wpz" firstAttribute="top" secondItem="TsO-X0-tHA" secondAttribute="bottom" constant="2" id="Xq5-O2-fGH"/>
+                    <constraint firstItem="ICO-Ma-0HF" firstAttribute="leading" secondItem="r39-oJ-BkP" secondAttribute="trailing" constant="2" id="atu-FC-WlS"/>
+                    <constraint firstItem="S5m-Aa-kWL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="cTo-ON-t7Z"/>
+                    <constraint firstItem="TsO-X0-tHA" firstAttribute="leading" secondItem="S5m-Aa-kWL" secondAttribute="trailing" constant="8" id="jPe-pa-qzJ"/>
+                    <constraint firstItem="Ju7-1G-1WD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="78" id="mQt-68-ZUJ"/>
+                    <constraint firstAttribute="trailing" secondItem="ICO-Ma-0HF" secondAttribute="trailing" constant="16" id="pig-Ua-1Ee"/>
+                    <constraint firstItem="Ju7-1G-1WD" firstAttribute="top" secondItem="bkJ-Wi-wpz" secondAttribute="bottom" constant="8" id="tcM-NQ-PrL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="comment" destination="Ju7-1G-1WD" id="Zw3-3J-TXu"/>
                 <outlet property="goodImage" destination="r39-oJ-BkP" id="Ns5-ce-5Ef"/>
                 <outlet property="goodNumber" destination="ICO-Ma-0HF" id="6hv-gA-xeZ"/>
                 <outlet property="profileImage" destination="S5m-Aa-kWL" id="31S-hA-dah"/>
                 <outlet property="userID" destination="bkJ-Wi-wpz" id="VFQ-b4-RZI"/>
                 <outlet property="userName" destination="TsO-X0-tHA" id="tQp-4D-cXb"/>
             </connections>
-            <point key="canvasLocation" x="6.5217391304347831" y="60.602678571428569"/>
+            <point key="canvasLocation" x="5.7971014492753632" y="47.879464285714285"/>
         </tableViewCell>
     </objects>
 </document>
